# valuo

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: market-backfill.yml  market-housekeeping.yml  market-scrape-publish.yml  market-train-publish.yml
ops/: cloudflare-bootstrap.md  migrate-runtime-data.sh  pipeline.crontab.example  publish-cloudflare.sh  register-pipeline-run.sh  run-backfill.sh  run-housekeeping.sh  run-refresh.sh  run-scrape-publish.sh  run-scrape.sh  run-train-publish.sh  run-train.sh  runtime-paths.sh  send-alert.sh  write-pipeline-run-report.sh
pipeline/: pyproject.toml
pipeline/src/praha_predictor/: __init__.py  bootstrap.py  cli.py  config.py  districts.py  features.py  geospatial.py  http.py  market_scope.py  modeling.py  opportunities.py  quality.py  schemas.py  signals.py  storage.py  text.py
pipeline/src/praha_predictor/sources/: base.py  bezrealitky.py  realitymix.py  remax.py
pipeline/tests/: test_bezrealitky_parser.py  test_districts.py  test_features.py  test_frontier.py  test_market_scope.py  test_modeling.py  test_opportunities.py  test_quality.py  test_realitymix_parser.py  test_remax_parser.py  test_storage.py
shared/: metro-subregions.json  prague-districts.json  transit-nodes.json
worker-app/: .dev.vars.example  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
worker-app/migrations/: 0001_init.sql  0002_productization.sql  0003_predictor_quality.sql  0004_pipeline_run_registry.sql
worker-app/public/: app.js  index.html  styles.css
worker-app/src/: auth.ts  billing.ts  (+9 more)
(+7 files in other folders)
